--- a/frontend/src/components/dashboard/SideBar/index.css
+++ b/frontend/src/components/dashboard/SideBar/index.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 256px;
+  width: 100%;
   border-right: 0.5px solid var(--accent-2-color);
   position:static;
   margin-top: 3rem;
