--- a/frontend/src/pages/dashboard/index.css
+++ b/frontend/src/pages/dashboard/index.css
@@ -1,34 +1,10 @@
-.overview {
-  display: flex;
-  background-color: var(--background-color);
-}
-
-.content {
+.dashboard{
+  display:grid;
+  /* background-color: var(--background-color); */
+  grid-template-columns: 2fr 8fr;
+  background-color: red;
+  height: 100vh;
   width: 100%;
-  background-color: rgb(250, 252, 254);
 }
 
-.welcome {
-  margin-top: 5%;
-  margin-left: 5%;
-  margin-right: 4%;
-}
 
-.head-text {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 6%;
-  margin-left: 5%;
-  margin-right: 4%;
-}
-
-.right-text {
-  display: flex;
-}
-.overview-body {
-  display: flex;
-}
-
-.dashboard__datatable{
-  overflow: scroll;
-}
