--- a/frontend/src/components/dashboard/CardHolder/index.css
+++ b/frontend/src/components/dashboard/CardHolder/index.css
@@ -1,11 +1,11 @@
 .card_container{
-    padding:20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 10px;
+    background-color: var(--background-color);
 }
 
 .card_container_wrapper{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
+
