--- a/frontend/src/pages/dashboard/index.css
+++ b/frontend/src/pages/dashboard/index.css
@@ -1,8 +1,7 @@
 .dashboard{
   display:grid;
-  /* background-color: var(--background-color); */
+  background-color: var(--background-color);
   grid-template-columns: 2fr 8fr;
-  background-color: red;
   height: 100vh;
   width: 100%;
 }
