--- a/frontend/src/components/elements/ListItem/listItem.module.css
+++ b/frontend/src/components/elements/ListItem/listItem.module.css
@@ -1,25 +1,32 @@
 .listItem__container{
-    display:flex;
-    grid-template-columns: 2fr 8fr;
+    display:grid;
+    grid-template-columns: 2fr 6fr 2fr;
     place-items: center;
-    background-color: var(--primary-color);
-    padding:5px;
+    background-color: aliceblue;
+    border-radius: 8px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-    gap: 15px;
+    width: 80%;
 }
 
 .listItem__container i{
-    font-size: 2rem;
+    font-size: 1rem;
     color: var(--accent-color);
     font-weight: 600;
     margin-left: 20px;
 }
 
 .listItem__container p{
-    font-size: 1.2rem; 
-    color:aliceblue;
+    font-size: .9rem; 
+    color:var(--main-color);
     font-family: Mulish;
     font-weight:300;
     align-self: flex-start;
     text-align: left;
+}
+
+.listItem__container .amount{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding-right:20px;
+    font-weight: 400;
+    color:var(--main-color)
 }
