--- a/frontend/src/components/elements/MetricPanel/index.css
+++ b/frontend/src/components/elements/MetricPanel/index.css
@@ -1,12 +1,17 @@
 
 .metrics__container{
-    margin-left: 10px;
-    padding: 5px;
-    background-color: rgb(255, 254, 254);
-    height: 100%;
-    width: 200px;
-    display: grid;
-    place-items: center;
-    border: 1px solid var(--accent-2-color);
-    border-radius:8px;
+    background-color: white;
+    width: 100%;
+    padding:5px;
+    border-radius: 8px;
+    box-shadow: 2px 3px 5px aliceblue;
+}
+
+.metrics__wrapper{
+    display: flex;
+    gap:10px;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+    margin: 20px;
 }
